Bug 96826 - [KBL] modeset failure
Summary: [KBL] modeset failure
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-05 17:07 UTC by Timo Aaltonen
Modified: 2019-06-24 07:50 UTC (History)
1 user (show)

See Also:
i915 platform: KBL
i915 features:


Attachments
log from recent nightly (77.25 KB, text/plain)
2016-07-05 17:07 UTC, Timo Aaltonen
no flags Details

Description Timo Aaltonen 2016-07-05 17:07:43 UTC
Created attachment 124913 [details]
log from recent nightly

A system fails to boot up properly, monitor remains blank. Nightly is affected, this is shown on the log (attached):

[    2.570838] WARNING: CPU: 1 PID: 167 at /home/kernel/COD/linux/drivers/gpu/drm/i915/intel_d
p.c:4091 intel_digital_port_connected+0x89/0x280 [i915]
[    2.570842] Missing switch case (4) in g4x_digital_port_connected
[    2.570843] Modules linked in: rtsx_pci_sdmmc mmc_core i915 ahci xhci_pci libahci xhci_hcd 
i2c_algo_bit e1000e libata drm_kms_helper crc32c_intel psmouse usbcore ptp rtsx_pci scsi_mod d
rm pps_core mfd_core usb_common fan thermal wmi i2c_hid video hid button fjes
[    2.570860] CPU: 1 PID: 167 Comm: kworker/u16:5 Not tainted 4.7.0-994-generic #201607042202
[    2.570863] Hardware name: FOOBAR      , BIOS 99.02.04 06/23/2016
[    2.570869] Workqueue: events_unbound async_run_entry_fn
[    2.570871]  0000000000000286 0000000002a6b479 ffffffff81321095 ffff880801e13c58
[    2.570875]  0000000000000000 ffffffff81078a6e ffff880801eb0000 ffff880801e13cb0
[    2.570878]  ffff880802319800 000000000000001a ffff8808023180e8 0000000000000003
[    2.570882] Call Trace:
[    2.570886]  [<ffffffff81321095>] ? dump_stack+0x5c/0x77
[    2.570889]  [<ffffffff81078a6e>] ? __warn+0xbe/0xe0
[    2.570891]  [<ffffffff81078aef>] ? warn_slowpath_fmt+0x5f/0x80
[    2.570895]  [<ffffffff81462bf4>] ? __pm_runtime_resume+0x54/0x70
[    2.570916]  [<ffffffffc0404969>] ? intel_digital_port_connected+0x89/0x280 [i915]
[    2.570935]  [<ffffffffc037c83e>] ? intel_display_power_get+0x2e/0x40 [i915]
[    2.570956]  [<ffffffffc0404bc1>] ? intel_dp_long_pulse+0x61/0x730 [i915]
[    2.570973]  [<ffffffffc037cbab>] ? intel_display_power_put+0xab/0xf0 [i915]
[    2.570993]  [<ffffffffc0405653>] ? intel_dp_detect+0x93/0xc0 [i915]
[    2.570999]  [<ffffffffc0230e9b>] ? drm_helper_probe_single_connector_modes+0x26b/0x510 [drm_kms_helper]
[    2.571005]  [<ffffffffc023ed4c>] ? drm_fb_helper_initial_config+0xac/0x420 [drm_kms_helper]
[    2.571008]  [<ffffffff810a08f0>] ? check_preempt_curr+0x50/0x90
[    2.571011]  [<ffffffff810a0944>] ? ttwu_do_wakeup+0x14/0xe0
[    2.571030]  [<ffffffffc03f4fa4>] ? intel_fbdev_initial_config+0x14/0x30 [i915]
[    2.571034]  [<ffffffff81099af5>] ? async_run_entry_fn+0x45/0x130
[    2.571037]  [<ffffffff810912a0>] ? process_one_work+0x160/0x430
[    2.571040]  [<ffffffff810915bd>] ? worker_thread+0x4d/0x480
[    2.571043]  [<ffffffff815e577d>] ? __schedule+0x1ed/0x6b0
[    2.571045]  [<ffffffff81091570>] ? process_one_work+0x430/0x430
[    2.571048]  [<ffffffff8109736d>] ? kthread+0xcd/0xf0
[    2.571050]  [<ffffffff815e9d9f>] ? ret_from_fork+0x1f/0x40
[    2.571052]  [<ffffffff810972a0>] ? kthread_create_on_node+0x190/0x190
[    2.571054] ---[ end trace e5ae5fa2879a99f3 ]---
[    2.571059] i915 0000:00:02.0: No connectors reported connected with modes
[    2.571063] [drm] Cannot find any crtc or sizes - going 1024x768
Comment 1 Ander Conselvan de Oliveira 2016-07-06 08:18:53 UTC
Could you give this patch a try?

https://lists.freedesktop.org/archives/intel-gfx/2016-July/099939.html
Comment 2 Rodrigo Vivi 2016-07-06 19:53:00 UTC
I don't believe anyone outside Intel have received a KBL-H or DT with Kabypoint PCH, but it is possible, so might be worth to try the patch.

The logs really looks like the logs I saw on a KBL with KBP here without this patch, so Ander might be right.

Anyways, Timo, could you please provide a full dmesg with drm.debug=0xe?
Also probably good if you can add a print on the intel_detect_pch function showing the pch id just in case....
Comment 3 Timo Aaltonen 2016-07-06 21:19:34 UTC
I'll have a test result of the patch quicker than a debug dmesg :)
Comment 4 Timo Aaltonen 2016-07-07 05:19:02 UTC
Yep, the patch works, thanks.
Comment 5 Rodrigo Vivi 2016-07-07 17:04:53 UTC
Thanks for the confirmation.
Patch is now merged on dinq.
Comment 6 oggyjack 2019-06-24 07:50:38 UTC
Thanks for the nice post here i am follow the some easily step https://enablecookieswindows10.com/ and learn the information how to enable cookies in windows 10 edge thnaks for the visit.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.